# agentmesh

./: ARCHITECTURE_REFACTORING.md  COMMIT_SUMMARY.md  COMPREHENSIVE_TEST_SUITE.md  DEPLOYMENT_GUIDE.md  ENHANCEMENT_QUICK_START.md  ENHANCEMENT_STATUS.md  ENTERPRISE_ENHANCEMENT_STRATEGY.md  EXECUTIVE_SUMMARY.md  GEMINI.md  IMPLEMENTATION_GUIDE.md  PHASE_2B_DOMAIN_MODELS_COMPLETE.md  PHASE_3_4_COMPLETE.md  README.md  REFACTORING_PROGRESS.md  SESSION_SUMMARY.md  SOLUTION_ENHANCEMENT_SUMMARY.md  TESTS_RUN_SUMMARY.md  TEST_EXECUTION_REPORT.md  TEST_SUITE_AVAILABILITY.md  UVP.md  eda.docx  fixes.md
agentmesh-eda/: .env.example  .gitignore  Dockerfile  README.md  SECURITY_SETUP.md  docker-compose.yml  generate_token.py  pyproject.toml
agentmesh-eda/agentmesh/aol/: agent.py  autonomous_agent.py  coordinator.py  decentralized_agent.py  decentralized_coordination.py  federated_learning.py  federated_mesh_agent.py  kafka_agent.py  orchestrator_agent.py  registry.py  safety_aware_agent.py  simple_agent.py  swarm_orchestrator.py  swarm_worker_agent.py  task_executor_agent.py  vertex_agent.py  workflow_engine.py
agentmesh-eda/agentmesh/api/: fastapi_app.py  validation_models.py
agentmesh-eda/agentmesh/cli/: main.py
agentmesh-eda/agentmesh/cqrs/: bus.py  event.py  event_store.py  example.py  handler.py  query.py  query_handler.py  read_model.py
agentmesh-eda/docs/: conf.py  cqrs.rst  dr.rst  epe.rst  gol.rst  index.rst  mal.rst
agentmesh-eda/tests/: conftest.py
agentmesh-eda/ui/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+139 files in other folders)
